--- a/index.html
+++ b/index.html
@@ -647,7 +647,7 @@
         <div class="container py-5">
             <div class="row g-4">
                 <div class="col-lg-4 mb-4 mb-lg-0">
-                    <img src="https://images.unsplash.com/photo-1612872087720-bb876e2e67d1?w=150&h=60&fit=crop" 
+                    <img src="img/UNICEF_Logo.png" 
                          alt="UNICEF Logo" 
                          class="footer-logo mb-3">
                     <p class="text-white-50">
